--- a/spec/html-runner.html
+++ b/spec/html-runner.html
@@ -7,8 +7,8 @@
 <body style="background-color: whitesmoke;">
 <script type="text/javascript" src="../node_modules/tgi-spec/dist/tgi.spec.js"></script>
 <script type="text/javascript" src="../node_modules/tgi-utility/dist/tgi.utility.js"></script>
-<script type="text/javascript" src="../dist/tgi-store-REMOTE_STORE.js"></script>
-<script type="text/javascript" src="../dist/tgi-store-REMOTE_STORE.spec.js"></script>
+<script type="text/javascript" src="../dist/tgi-store-remote.js"></script>
+<script type="text/javascript" src="../dist/tgi-store-remote.spec.js"></script>
 <script type="text/javascript" src="./html-runner.js"></script>
 </body>
 </html>
