--- a/spec/html-runner.html
+++ b/spec/html-runner.html
@@ -5,6 +5,7 @@
   <title></title>
 </head>
 <body style="background-color: whitesmoke;">
+<script type="text/javascript" src="vendor/socket.io-client/socket.io.js"></script>
 <script type="text/javascript" src="../node_modules/tgi-spec/dist/tgi.spec.js"></script>
 <script type="text/javascript" src="../node_modules/tgi-utility/dist/tgi.utility.js"></script>
 <script type="text/javascript" src="../dist/tgi-store-remote.js"></script>
